# database-app

./: Makefile  app.c  app.py  cars.db  flake.nix  meson.build
data/: database-app.gresource.xml  meson.build
data/scss/: main.scss  meson.build  theme.scss
data/ui/: meson.build  window.blp
src/: app.vala  main.vala  meson.build  window.vala
